# ini-config

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yaml  codeql.yml
config_parser/: __init__.py  config_parser.py
debian/: README  changelog  control  copyright  rules
debian/ini-config/DEBIAN/: control  md5sums
debian/ini-config/usr/lib/python3.12/dist-packages/ini_config/: ini_config.py
debian/source/: format
ini_config/: __init__.py  ini_parser.py
src/ini_config/: __init__.py  ini_config.py
src/ini_config/locales/: ini_config.pot
src/ini_config/locales/ru_RU/LC_MESSAGES/: ini_config.mo  ini_config.po
tests/: TODO.md  conftest.py  test_config_files.py  test_i18n.py  test_locale.py  test_parsing.py
