[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ini-config"
version = "0.1.0"
description = "A typed INI configuration parser with validation and namespace access"
readme = "README.md"
authors = [
    {name = "Alexander Safonov", email = "aesafonov@tvc.ru"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/ini-parser"
Repository = "https://github.com/yourusername/ini-parser"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ini_config*"]