[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ini-config"
version = "0.2.0"
description = "Parser for INI configuration files"
readme = "README.md"
authors = [
    {name = "Alexandr Safonov", email = "aesafonov@tvc.ru"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/ini-config"
Repository = "https://github.com/yourusername/ini-config"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ini_config*"]

[tool.commitizen]
version = "0.2.0"
version_files = [
    "pyproject.toml:version"
]
